# llama.cpp

./: CMakeUserPresets.json  README.md  convert_hf_to_gguf.py  run-ctags.sh
.github/workflows/: test-cpu-variants.yml
common/: chat.cpp  llguidance.cpp
conversion/: hailo.py
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h  ggml-hailo.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cpu/: vec.h
ggml/src/ggml-cpu-ref/: CMakeLists.txt  arch-fallback.h  ggml-cpu-impl.h  ggml-cpu-ref.c  ggml-cpu-ref.cpp  ops.cpp  quants.c  simd-mappings.h  vec.cpp  vec.h
ggml/src/ggml-hailo/: CMakeLists.txt  ggml-hailo.cpp
gguf-py/gguf/: constants.py
include/: llama.h
scripts/: build-install.sh  common.sh  get-build-dir.sh  run-cli.sh  run-save-and-load.sh
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-gpu-sampling.cpp  llama-gpu-sampling.h  llama-graph.cpp  llama-graph.h  llama-memory-no-op.cpp  llama-memory-no-op.h  llama-model-loader.cpp  llama-model.cpp  llama-sampling.cpp
src/models/: hailo.cpp  models.h
tests/: CMakeLists.txt  test-backend-ops.cpp  test-backend-sampler-compare.cpp  test-gpu-sampling.cpp  test-sampling.cpp
